# smoothradio

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json  turbo.json
apps/admin-ui/: Dockerfile  index.html  package.json  tsconfig.json
apps/admin-ui/src/: AdminApp.tsx
apps/admin-ui/src/components/: ModelConfig.tsx  ScanControls.tsx
apps/admin-ui/src/pages/: Dashboard.tsx
apps/admin-ui/src/services/: api.ts
apps/api/: Dockerfile  package.json
apps/api/src/: index.ts
apps/api/src/controllers/: artwork.ts  auth.ts  discovery.ts  events.ts  playlist.ts  stream.ts
apps/api/src/middleware/: auth.ts
apps/worker/: Dockerfile  package.json  tsconfig.json
apps/worker/src/: ai-categorizer.ts  index.ts  scan-processor.ts
apps/worker/src/categorization/: api-key.ts  buckets.ts  engine.ts  index.ts  sanitize.ts
src/: index.js  index.ts  metadata.ts  scanner.js  scanner.ts  types.ts
src/smoothradio/: __init__.py  __main__.py  categorizer.py  config.py  database.py  library.py  metadata.py  models.py  server.py  streamer.py
static/: index.html
tests/: test_database.py  test_library.py  test_metadata.py
tests/e2e/: admin.spec.ts  streaming.spec.ts
tests/unit/: auth.test.ts  categorization-api-key-config.test.ts  categorization-buckets.test.ts  categorization-engine.test.ts  categorization-sanitize.test.ts
