[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothradio"
version = "0.1.0"
description = "AI-powered streaming radio server"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "mutagen>=1.47.0",
]

[project.scripts]
smoothradio = "smoothradio.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
